--- a/src/components/Card/Card.css
+++ b/src/components/Card/Card.css
@@ -4,6 +4,7 @@
   transition: all 0.2s ease-in-out;
   height: fit-content;
   width: 100%;
+  max-width: 300px;
   overflow: hidden;
   position: relative;
 }
@@ -19,7 +20,7 @@
 .models .products .cards .card .icons {
   transition: 1s;
   position: absolute;
-  top: 25px;
+  top: 100px;
   right: -100%;
   display: flex;
   flex-direction: column;
