--- a/src/components/ContactForm/ContactForm.css
+++ b/src/components/ContactForm/ContactForm.css
@@ -1,164 +1,168 @@
-.contact-more-info-about-us{
+.contact-more-info-about-us {
   padding-bottom: 80px;
 }
-.contact-section{
-padding-bottom: 73px;
-border-bottom:  1px solid #C0C0C0;
+.contact-section {
+  padding-bottom: 73px;
+  border-bottom: 1px solid #c0c0c0;
 }
-.head-contact-us-page{
-
-    display: flex;
-    align-items:flex-start;
-    justify-content: space-between;
-    padding-top: 74px
-}
-.head-contact-us-page .we-love-hear-you-sec ,.head-contact-us-page  .leave-massege-sec{
-    width: 45%;
-    h1{
-      font-weight: 600;
-      font-size: 32px;
-      padding-bottom: 20px;
-    }
-    p{
-      font-weight: 400;
-      font-size:18px ;
-    }
-}
-.contact-section .shop-info-and-form{
+.head-contact-us-page {
   display: flex;
-  align-items:flex-start;
+  align-items: flex-start;
+  justify-content: space-between;
+  padding-top: 74px;
+}
+.head-contact-us-page .we-love-hear-you-sec,
+.head-contact-us-page .leave-massege-sec {
+  width: 45%;
+  h1 {
+    font-weight: 600;
+    font-size: 32px;
+    padding-bottom: 20px;
+  }
+  p {
+    font-weight: 400;
+    font-size: 18px;
+  }
+}
+.contact-section .shop-info-and-form {
+  display: flex;
+  align-items: flex-start;
   justify-content: space-between;
   padding-top: 57px;
 }
-.contact-shop-info, .contact-form{
+.contact-shop-info,
+.contact-form {
   width: 45%;
 }
-.contact-section .shop-info-and-form .contact-shop-info{
+.contact-section .shop-info-and-form .contact-shop-info {
   display: flex;
   flex-direction: column;
   gap: 32px;
-  h2{
+  h2 {
     font-weight: 600;
-    font-size:16px ;
+    font-size: 16px;
   }
 }
-.all-details-info{
+.all-details-info {
   display: flex;
   flex-direction: column;
   gap: 16px;
 }
-.address-and-business-hours , .phone-and-email {
+.address-and-business-hours,
+.phone-and-email {
   display: flex;
   justify-content: space-between;
- 
 }
-.more-details{
+.more-details {
   display: flex;
   align-items: center;
   gap: 10px;
- 
-  .contact-icon{
+
+  .contact-icon {
     height: 24px;
     width: 24px;
   }
 }
-.all-details-info .more-details p{
+.all-details-info .more-details p {
   font-weight: 300;
-  font-size:16px ;
+  font-size: 16px;
 }
-.phone-and-email{
+.phone-and-email {
   display: flex;
 }
-.map iframe{
+.map iframe {
   width: 100%;
 }
 /* contact-form */
-.contact-form{
+.contact-form {
   display: flex;
   flex-direction: column;
   gap: 48px;
 }
-.contact-form .name-and-email-input ,.contact-form .phone-and-subject-input{
-display: flex;
-gap: 32px;
-input{
-  width: 50%;
-  outline: none;
-  border: none;
-  border-bottom: 1px solid #000E0C;
-  padding-bottom: 16px;
+.contact-form .name-and-email-input,
+.contact-form .phone-and-subject-input {
+  display: flex;
+  gap: 32px;
+  input {
+    width: 50%;
+    outline: none;
+    border: none;
+    border-bottom: 1px solid #000e0c;
+    padding-bottom: 16px;
+  }
+  input::placeholder {
+    font-weight: 400;
+    font-size: 16px;
+    color: #000e0c;
+  }
 }
-input::placeholder{
-  font-weight: 400;
-  font-size:16px ;
-  color:  #000E0C;
-}
-}
-.textarea{
+.textarea {
   display: flex;
   flex-direction: column;
   gap: 16px;
-  textarea{
+  textarea {
     width: 100%;
     height: 27vh;
-    resize: none; 
-    border: 1px solid #000E0C
+    resize: none;
+    border: 1px solid #000e0c;
   }
- 
 }
-.submit-btn{
+.submit-btn {
   width: 117px;
-  height:52px;
+  height: 52px;
   align-self: flex-start;
   background-color: var(--primary-color);
-  a{
+  a {
     text-decoration: none;
     font-weight: 500;
-     font-size:18px ;
-     color: #ffffff;
-  
+    font-size: 18px;
+    color: #ffffff;
   }
 }
-.submit-btn:hover{
+.submit-btn:hover {
   background-color: var(--third-color);
 }
 @media (max-width: 992px) {
-  .contact-section .shop-info-and-form ,.head-contact-us-page {
-   flex-direction: column-reverse;
+  .contact-section .shop-info-and-form,
+  .head-contact-us-page {
+    flex-direction: column-reverse;
     gap: 16px;
   }
-  .head-contact-us-page .we-love-hear-you-sec ,.head-contact-us-page  .leave-massege-sec , .contact-form {
+  .head-contact-us-page .we-love-hear-you-sec,
+  .head-contact-us-page .leave-massege-sec,
+  .contact-form {
     width: 100%;
   }
-  .head-contact-us-page , .contact-section .shop-info-and-form{
+  .head-contact-us-page,
+  .contact-section .shop-info-and-form {
     padding-top: 30px;
   }
-  .map iframe{
+  .map iframe {
     width: 80vw;
   }
-  .more-details{
-  gap: 20px;
-    p{
+  .more-details {
+    gap: 20px;
+    p {
       font-weight: 500;
-      font-size:20px ;
+      font-size: 20px;
     }
-    .contact-icon{
+    .contact-icon {
       height: 35px;
       width: 35px;
     }
   }
-  .contact-shop-info{
+  .contact-shop-info {
     width: 100%;
   }
-  
- .contact-section{
-  padding-bottom: 0;
- }
+
+  .contact-section {
+    padding-bottom: 0;
+  }
 }
 @media (max-width: 500px) {
-
-  .phone-and-email , .address-and-business-hours{
- flex-direction: column;
- gap: 10px;
+  .phone-and-email,
+  .address-and-business-hours {
+    flex-direction: column;
+    gap: 10px;
   }
 }
