--- a/src/components/3DModel/index.css
+++ b/src/components/3DModel/index.css
@@ -9,25 +9,6 @@
   display: flex;
   gap: 50px;
 }
-.models .topBar .search {
-  position: relative;
-  padding-top: 15px;
-  width: 200px;
-  padding-bottom: 15px;
-}
-.models .topBar .search input {
-  font-size: 15px;
-  border: none;
-  position: absolute;
-  color: #23262f;
-  margin: auto;
-  border-bottom: 1px solid var(--text-color);
-  padding: 0 0 10px 0;
-}
-.models .topBar .search img {
-  right: 14px;
-  position: absolute;
-}
 .models .topBar .results {
   padding: 10px;
   font-size: 17px;
@@ -46,13 +27,6 @@
   margin-top: 7px;
   color: #23262f;
 }
-.models .topBar .search::before {
-  contain: "./search.svg";
-  position: relative;
-  width: 50px;
-  height: 50px;
-  color: #23262f;
-}
 .models .products {
   display: flex;
   justify-content: space-between;
@@ -69,7 +43,7 @@
   flex: 1;
   grid-template-columns: repeat(auto-fill, minmax(250px, 1fr));
   gap: 50px;
-  margin: 35px 0px;
+  margin-bottom: 35px;
   border-bottom: 1px solid #c0c0c0;
   padding-bottom: 50px;
 }
