--- a/src/components/Filter/Filter.css
+++ b/src/components/Filter/Filter.css
@@ -158,3 +158,30 @@
   text-decoration: underline;
   padding: 20px 0 0 0;
 }
+/* search */
+.filters .search {
+  position: relative;
+  /* padding-top: 15px; */
+  width: 200px;
+  /* padding-bottom: 15px; */
+}
+.filters .search input {
+  font-size: 15px;
+  border: none;
+  position: absolute;
+  color: #23262f;
+  margin: auto;
+  border-bottom: 1px solid var(--text-color);
+  padding: 0 0 10px 0;
+}
+.filters .search img {
+  right: 14px;
+  position: absolute;
+}
+.filters .search::before {
+  contain: "./search.svg";
+  position: relative;
+  width: 50px;
+  height: 50px;
+  color: #23262f;
+}
