show products logic and forgetPassFix

--- a/src/components/Loader/Loader.css
+++ b/src/components/Loader/Loader.css
@@ -1,12 +1,11 @@
 .loader-holder {
-  margin-top: 60px;
+  width: 100%;
   display: flex;
   justify-content: center;
   align-items: center;
 }
 .loader {
   --s: 25px;
-
   --_d: calc(0.353 * var(--s));
   width: calc(var(--s) + var(--_d));
   aspect-ratio: 1;
