--- a/src/sections/HomeSections/SpecificProducts/SpecificProducts.css
+++ b/src/sections/HomeSections/SpecificProducts/SpecificProducts.css
@@ -1,5 +1,8 @@
 .specific-products {
 }
+.specific-products .loader-holder {
+  margin-top: 60px;
+}
 .specific-products .cards {
   margin-top: 90px;
   display: grid;
