--- a/src/components/Product/Product.css
+++ b/src/components/Product/Product.css
@@ -1,6 +1,7 @@
 .product {
   /* letter-spacing: 1px; */
-  margin: 150px 60px 0 60px;
+  /* margin: 150px 60px 0 60px; */
+  margin: 50px 60px 0 60px;
   .view-cart {
     display: flex;
     justify-content: space-between;
