--- a/src/components/UpdatePasswordCard/UpdatePasswordCard.css
+++ b/src/components/UpdatePasswordCard/UpdatePasswordCard.css
@@ -176,8 +176,9 @@
   .password .card {
     width: 80%;
   }
-@media (max-width: 500px) {
-  .password .card {
-    width: 90%;
+  @media (max-width: 500px) {
+    .password .card {
+      width: 90%;
+    }
   }
 }
