--- a/src/sections/EmptyCart/EmptyCart.css
+++ b/src/sections/EmptyCart/EmptyCart.css
@@ -1,34 +1,36 @@
-.emptycart .container{
-display: flex;
-justify-content: center;
-align-items: center;
-height: 80vh;
+.emptycart .container {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 80vh;
 }
-.emptycart .container .box{
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    gap: 23px;
+.emptycart .container .box {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  gap: 23px;
 }
-.emptycart .box img{
-width: 142;
-height: 142;
+.emptycart .box img {
+  width: 142;
+  height: 142;
 }
-.emptycart .box p{
-    font-weight: 400;
-    font-size: 18px;
-    color:#1D322F;
+.emptycart .box p {
+  font-weight: 400;
+  font-size: 18px;
+  color: #1d322f;
 }
-.emptycart .box button{
-    width: 204;
-    height: 52;
-    padding: 16px 24px;
-    color: #ffffff;
-    font-weight: 500;
-    font-size: 18px;
-    background-color: #1D322F;
+.emptycart .box button {
+  width: 204;
+  height: 52;
+  padding: 16px 24px;
+  color: #ffffff;
+  font-weight: 500;
+  font-size: 18px;
+  cursor: pointer;
+  transition: 0.5s;
+  background-color: #1d322f;
 }
-.emptycart .box button:hover{
-    color: white;
-    background-color: var(--secondary-color);
+.emptycart .box button:hover {
+  color: white;
+  background-color: var(--secondary-color);
 }
