--- a/src/components/NavBar/NavBar.css
+++ b/src/components/NavBar/NavBar.css
@@ -34,6 +34,11 @@ nav .container ul.links li {
 nav .container ul.links li a {
   padding: 10px;
   color: var(--primary-color);
+  transition: 0.5s;
+}
+nav .container ul.links li a:hover {
+  /* color: var(--primary-color); */
+  font-weight: 500;
 }
 nav .container ul.links li a.active {
   font-weight: 600;
