productCopyShare&productColorSelect&blogsSearch&constantsFolder

--- a/src/components/Product/Product.css
+++ b/src/components/Product/Product.css
@@ -78,13 +78,21 @@
         .share {
           display: flex;
           justify-content: center;
-
+          align-items: center;
+          gap: 10px;
           color: #5f6c72;
           .icon {
+            margin-top: 3px;
             color: #5f6c72;
-            padding: 15px;
+            background-color: transparent;
             width: 24px;
             height: 24px;
+            font-size: 16px;
+            transition: 0.5s;
+            cursor: pointer;
+          }
+          .icon:hover {
+            color: var(--primary-color);
           }
         }
       }
@@ -100,12 +108,16 @@
         display: flex;
         align-items: center;
         gap: 12px;
-        span {
+        .choose-color {
+          display: block;
           width: 24px;
           height: 24px;
           border-radius: 50%;
         }
-        span.active {
+        input {
+          display: none;
+        }
+        .choose-color.active {
           border: 2px solid var(--primary-color);
         }
       }
@@ -140,25 +152,29 @@
         display: flex;
         justify-content: space-between;
         gap: 10px;
-        a {
-          padding: 15px 100px;
-          color: white;
-          width: 350px;
-          text-align: center;
-          background-color: var(--primary-color);
+        .cart-btn {
+          /* width: 350px; */
           /* height: 50px; */
-          letter-spacing: 1px;
+          width: 65%;
+          padding: 15px;
           display: flex;
           align-items: center;
-          justify-content: space-around;
+          justify-content: center;
+          gap: 10px;
+          color: white;
+          text-align: center;
+          background-color: var(--primary-color);
+          letter-spacing: 1px;
+          font-weight: 400;
+          font-size: 18px;
           cursor: pointer;
           .arrow-icon {
             font-size: 22px;
             transition: 0.5s;
+            /* margin-bottom: 4px; */
           }
         }
-
-        a:hover {
+        .cart-btn:hover {
           background-color: var(--third-color);
           .arrow-icon {
             transform: rotate(45deg);
@@ -166,13 +182,15 @@
         }
 
         .product-number {
-          width: 130px;
+          /* width: 130px; */
+          width: 33%;
           text-align: center;
           padding: 0 30px;
           display: flex;
           justify-content: space-between;
           align-items: center;
           border: 1px solid #1d322f;
+          order: 2;
 
           button {
             background-color: white;
