--- a/src/components/Product/Product.css
+++ b/src/components/Product/Product.css
@@ -237,6 +237,7 @@
               a {
                 display: flex;
                 justify-content: space-between;
+                color: black;
                 .suffix {
                   font-weight: 500;
                 }
