--- a/src/pages/Blogs/Blogs.css
+++ b/src/pages/Blogs/Blogs.css
@@ -1,4 +1,12 @@
-
+.blogs .no-blogs{
+  display: flex;
+  align-items: center;
+justify-content: center;
+  font-size: 30px;
+  font-weight: 500;
+  padding: 30px 0;
+  height: 70vh;
+}
 .holder-blogs {
     margin-top: 90px;
     margin-bottom: 80px;
