--- a/src/components/CustomizeOrder/CustomizeOrder.css
+++ b/src/components/CustomizeOrder/CustomizeOrder.css
@@ -1,243 +1,232 @@
 .popupOverlay {
-    position: fixed;
-      top: 0;
-      left: 0;
-      background-color: rgba(0, 0, 0, 0.6);
-      text-align: left;
-      
-    }
-    .popupOverlay .pop-central{
-        width: 100vw;
-        height: 90vh;
-        margin-top:80px;
-        display: flex;
-        justify-content: center;
-        align-items: center;
-      
-    }
-.popupOverlay .pop-up-costomize-order-page{
-    
-    position: fixed;
-    width:65vw;
-    height:60vh;
-    margin:0 auto;
-    background-color:white;
-    box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
-    z-index: 100000;
-    padding: 32px;
-    display: flex;
-    /* align-items: center; */
-    flex-direction: column;
-    justify-content: center;
-  
-    
+  position: fixed;
+  top: 0;
+  left: 0;
+  background-color: rgba(0, 0, 0, 0.6);
+  text-align: left;
+}
+.popupOverlay .pop-central {
+  width: 100vw;
+  height: 90vh;
+  margin-top: 80px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+.popupOverlay .pop-up-costomize-order-page {
+  position: fixed;
+  width: 65vw;
+  height: 60vh;
+  margin: 0 auto;
+  background-color: white;
+  box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
+  z-index: 100000;
+  padding: 32px;
+  display: flex;
+  /* align-items: center; */
+  flex-direction: column;
+  justify-content: center;
 }
 
+.popupOverlay .pop-up-costomize-order-page .close-btn {
+  background-color: transparent;
+}
+.popupOverlay .pop-up-costomize-order-page .close-btn .circle-close-icon {
+  width: 32px;
+  height: 32px;
+  border-radius: 50%;
+  background-color: var(--third-color);
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  .close-icon {
+    color: white;
+    width: 20px;
+    height: 20px;
+  }
+}
+.popupOverlay .pop-up-costomize-order-page .bring-idea-container {
+  display: flex;
 
-.popupOverlay .pop-up-costomize-order-page .close-btn .circle-close-icon{
-    width: 32px;
-    height: 32px;
+  gap: 40px;
+  .Bring-idea-tolife-sec {
+    width: 50%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+
+    img {
+      width: 79px;
+      height: 79px;
+    }
+    h1 {
+      font-weight: 600;
+      font-size: 30px;
+    }
+    p {
+      font-weight: 400;
+      font-size: 20px;
+      text-align: center;
+    }
+  }
+}
+.popupOverlay
+  .pop-up-costomize-order-page
+  .bring-idea-container
+  .customize-form {
+  display: flex;
+  flex-direction: column;
+  gap: 20px;
+  width: 50%;
+  .location-box,
+  .chose-product-img,
+  .dimenision-label {
+    input {
+      border: 1px solid #66666659;
+      padding-left: 7px;
+    }
+    input :focus {
+      outline: 2px solid var(--third-color);
+    }
+    label {
+      color: #666666;
+      padding-bottom: 7px;
+    }
+  }
+}
+.popupOverlay
+  .pop-up-costomize-order-page
+  .bring-idea-container
+  .customize-form
+  .dimenision-inputs {
+  display: flex;
+  gap: 30px;
+  .dimenision-label {
+    display: flex;
+    flex-direction: column;
+  }
+  input {
+    width: 100%;
+    height: 40px;
+  }
+}
+.chose-product-img {
+  position: relative;
+  width: 100%;
+  height: 40px;
+  label {
+    border: 1px solid #66666659;
+    padding-left: 7px;
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    top: 0;
+    left: 0;
+    z-index: 1000;
+    display: flex;
+    align-items: center;
+    font-weight: 400;
+    font-size: 14px;
+    color: #666666;
+  }
+  input {
+    position: absolute;
+    top: 0;
+    left: 0;
+    opacity: 0;
+    width: 100%;
+    height: 100%;
+    cursor: pointer;
+    font-weight: 200;
+    font-size: 16px;
+  }
+}
+.choose-color {
+  .label-choose-color {
+    padding-right: 10px;
+  }
+  input {
+    width: 50px;
+    padding-left: 0;
+  }
+}
+.location-box {
+  display: flex;
+  flex-direction: column;
+  input {
+    width: 100%;
+    height: 40px;
+  }
+}
+
+.count {
+  display: flex;
+  gap: 10px;
+  .count-number {
+    border: 1px solid var(--third-color);
+    padding: 0 7px;
+  }
+  .plus-minuce-box {
+    width: 27px;
+    height: 27px;
     border-radius: 50%;
     background-color: var(--third-color);
     display: flex;
     align-items: center;
     justify-content: center;
-    .close-icon{
-        color: white;
-        width: 20px;
-        height: 20px;
+    button {
+      background: none;
+      font-size: 20px;
+      font-weight: 400;
+      color: #fff;
     }
+  }
 }
-.popupOverlay .pop-up-costomize-order-page .bring-idea-container{
-    display: flex;
-    
-    gap: 40px;
-    .Bring-idea-tolife-sec{
-        width: 50%;
-        display: flex;
-        justify-content: center;
-        align-items: center;
-        flex-direction: column;
-
-       
-        img{
-            width: 79px;
-            height:79px ;
-        
-        }
-        h1{
-            font-weight: 600;
-            font-size: 30px;
-     
-        }
-        p{
-            font-weight: 400;
-            font-size: 20px;
-            text-align: center;
-        }
-    }
-  
-
+.color-counter-box {
+  display: flex;
+  justify-content: space-between;
 }
-.popupOverlay .pop-up-costomize-order-page .bring-idea-container .customize-form{
-display: flex;
-flex-direction: column;
-gap: 20px;
-width: 50%;
-.location-box ,.chose-product-img , .dimenision-label{
-    input{
-        border: 1px solid #66666659;
-        padding-left: 7px;
-    
-    }
-    input :focus{
-        outline: 2px solid var(--third-color);
-    }
-    label{
-    
-        color: #666666;
-        padding-bottom: 7px;
-    
-    }
+.submit-send {
+  width: 100%;
+  height: 40px;
+  background-color: var(--third-color);
+  color: #fff;
+  font-weight: 600;
+  font-size: 16px;
+  border: none;
 }
-
-
-} 
-.popupOverlay .pop-up-costomize-order-page .bring-idea-container .customize-form .dimenision-inputs{
-    display: flex;
-    gap: 30px;
-    .dimenision-label{
-        display: flex;
-        flex-direction: column;
-    }
-    input{
-       width: 100%;
-       height: 40px;
-    }
-}
-.chose-product-img{
-    position: relative;
-    width: 100%;
-    height: 40px;
-    label{
-        border: 1px solid #66666659;
-        padding-left: 7px;
-            position: absolute;
-            width: 100%;
-            height: 100%;
-            top: 0;
-            left: 0;
-            z-index: 1000; 
-            display: flex;
-            align-items: center;
-            font-weight: 400;
-            font-size: 14px;
-    color: #666666;
-
-    }
-    input {
-        position: absolute;
-        top: 0;
-        left: 0;
-        opacity: 0;
-        width: 100%;
-         height: 100%;
-        cursor: pointer;
-        font-weight: 200;
-        font-size: 16px;
-     
-      }
-    
-}
-.choose-color {
-    .label-choose-color{
-        padding-right: 10px;
-      
-    }
-    input{
-        width: 50px;
-        padding-left: 0;
-    }
-    
-
-}
-.location-box{
-    display: flex;
+@media (max-width: 992px) {
+  .popupOverlay .pop-up-costomize-order-page .bring-idea-container {
     flex-direction: column;
-    input{
-        width:100%;
-        height: 40px;
-     
+    .Bring-idea-tolife-sec {
+      width: 100%;
     }
-   
-}
-
-.count{
-    display: flex;
-    gap: 10px;
-    .count-number{
-        border: 1px solid var(--third-color) ;
-        padding:0 7px;
-    }
-    .plus-minuce-box{
-        width: 27px;
-        height: 27px;
-        border-radius: 50%;
-        background-color: var(--third-color);
-        display: flex;
-        align-items: center;
-        justify-content: center;
-        button{
-            background: none;
-            font-size: 20px;
-            font-weight: 400;
-            color: #fff;
-        }
-        
-    }
-    
-}
-.color-counter-box{
-    display: flex;
-    justify-content: space-between;
-}
-.submit-send{
+  }
+  .popupOverlay
+    .pop-up-costomize-order-page
+    .bring-idea-container
+    .customize-form {
     width: 100%;
-    height:40px;
-    background-color:var(--third-color);
-    color: #fff;
-    font-weight: 600;
-    font-size: 16px;
-   border: none;
+  }
 }
-@media (max-width:992px) {
-    .popupOverlay .pop-up-costomize-order-page .bring-idea-container{
-        flex-direction: column;
-        .Bring-idea-tolife-sec{
-            width: 100%;
-        }
-    }
-    .popupOverlay .pop-up-costomize-order-page .bring-idea-container .customize-form{
-        width: 100%;
-    }
+@media (max-width: 650px) {
+  .popupOverlay .pop-up-costomize-order-page {
+    height: 70vh;
   }
-  @media (max-width:650px){
-    .popupOverlay .pop-up-costomize-order-page{
-        height: 70vh;
-    }
+}
+@media (max-width: 400px) {
+  .popupOverlay .pop-up-costomize-order-page {
+    height: 90vh;
   }
-  @media (max-width:400px){
-    .popupOverlay .pop-up-costomize-order-page{
-        height: 90vh;
-    }
-    .color-counter-box{
-        flex-direction: column;
-        gap: 15px;
-    }
+  .color-counter-box {
+    flex-direction: column;
+    gap: 15px;
   }
-  @media (max-width:550px){
-    .color-counter-box{
-        flex-direction: column;
-         gap: 15px;
-    }
+}
+@media (max-width: 550px) {
+  .color-counter-box {
+    flex-direction: column;
+    gap: 15px;
   }
+}
