--- a/src/components/LogIn/LogIn.css
+++ b/src/components/LogIn/LogIn.css
@@ -187,7 +187,7 @@
   text-align: center;
   font-size: 16px;
   font-weight: 100;
-  width: 276px;
+  width: 100%;
   height: 60px;
   padding: 15px;
   margin: auto;
