--- a/src/components/Product/Product.css
+++ b/src/components/Product/Product.css
@@ -228,12 +228,16 @@
   }
   hr {
     width: 100%;
-    margin: 50px 0;
+    margin: 30px 0;
   }
   .description {
     .title {
       font-size: 22px;
       font-weight: bold;
+    }
+    .des {
+      display: grid;
+      grid-template-columns: repeat(2, 1fr);
     }
     .info {
       display: flex;
@@ -324,7 +328,7 @@
           }
         }
         hr {
-          margin: 15px 0;
+          /* margin: 15px 0; */
         }
         .architecture {
           p {
@@ -347,4 +351,14 @@
       }
     }
   }
+}
+.product .description,
+.product .comment-bar,
+.product .write-comment-sec {
+  width: 70%;
+}
+
+.rating {
+  color: #fa8232;
+  margin: 0px 20px;
 }
