--- a/src/components/SignUp/SignUp.css
+++ b/src/components/SignUp/SignUp.css
@@ -47,7 +47,7 @@
     justify-content: center;
     align-items: center;
     .signup-form {
-      margin-top: 40px;
+      margin-top: 10px;
 
       width: 100%;
       background: white;
@@ -234,7 +234,7 @@
   text-align: center;
   font-size: 16px;
   font-weight: 100;
-  width: 276px;
+  width: 100%;
   height: 60px;
   padding: 15px;
   margin: auto;
