--- a/src/pages/Blogs/Blogs.css
+++ b/src/pages/Blogs/Blogs.css
@@ -8,7 +8,7 @@ justify-content: center;
   height: 70vh;
 }
 .holder-blogs {
-    margin-top: 90px;
+    margin-top: 60px;
     margin-bottom: 80px;
     display: grid;
     grid-template-columns: repeat(auto-fill, minmax(300px, 1fr));
@@ -41,3 +41,20 @@ justify-content: center;
     fill: #000E0C;
     
   }
+ .search-holder-blog .search-blog {
+  border-bottom: 1px solid #c0c0c0;
+  width: 225px;
+  padding: 25px 0 10px ;
+  input {
+    border: none;
+    outline: none;
+    font-weight: 400;
+    font-size: 16px;
+    color: #23262f;
+    padding-top: 20px;
+  }
+  img {
+    width: 20px;
+    height: 20px;
+  }
+ }
