--- a/src/pages/Designer/Designer.css
+++ b/src/pages/Designer/Designer.css
@@ -35,6 +35,12 @@
   justify-content: center;
   gap: 24px;
 }
+ .designer-list .no-designer-matches{
+  text-align: center;
+  font-size: 20px;
+  font-weight: 400;
+  padding-top: 50px;
+ }
 @media (max-width: 992px) {
   .designers .designer-header .search-filter-designer {
     flex-direction: column;
