--- a/src/components/3DModel/index.css
+++ b/src/components/3DModel/index.css
@@ -1,5 +1,5 @@
 .models {
-  margin-top: 12px;
+  margin-top: 40px;
 }
 .models h3 {
   padding: 50px 0;
@@ -28,12 +28,39 @@
   color: #23262f;
 }
 .models .products {
+  position: relative;
   display: flex;
   justify-content: space-between;
   gap: 65px;
+  padding-left: 334px;
 }
 .models .products .filters {
   /* width: 40vw; */
+  padding-right: 20px;
+  position: absolute;
+  top: 0px;
+  left: 0px;
+  background: white;
+  z-index: 100;
+
+  overflow: auto;
+  height: 100%;
+  width: 253px;
+}
+
+.models .products .filters::-webkit-scrollbar {
+  width: 12px;
+}
+
+.models .products .filters::-webkit-scrollbar-thumb {
+  border-radius: 10px;
+  height: 10px;
+  background-color: #4a5957;
+  background-color: #c0c0c0;
+}
+
+.models .products .filters::-webkit-scrollbar-track {
+  background-color: transparent;
 }
 .models .products .cards {
   display: grid;
@@ -43,12 +70,23 @@
   flex: 1;
   grid-template-columns: repeat(auto-fill, minmax(250px, 1fr));
   gap: 50px;
-  margin-bottom: 35px;
+  /* margin-bottom: 35px; */
   border-bottom: 1px solid #c0c0c0;
   padding-bottom: 50px;
 }
 
+@media (max-width: 999px) {
+  .models .products .cards {
+    .card {
+      width: 100%;
+      max-width: unset;
+    }
+  }
+}
 @media (max-width: 767px) {
+  .models .products {
+    padding-left: 0px;
+  }
   .models {
     h3 {
       text-align: center;
