--- a/src/components/Filter/Filter.css
+++ b/src/components/Filter/Filter.css
@@ -1,5 +1,6 @@
 .filter {
-  width: 200px;
+  /* width: 200px; */
+  width: 100%;
 }
 .filter .title {
   font-size: 20px;
@@ -59,7 +60,8 @@
 }
 .filter hr {
   margin: 30px 0 0 0;
-  width: 200px;
+  /* width: 200px; */
+  width: 100%;
 }
 .filter-section {
   gap: 40px;
@@ -160,19 +162,17 @@
 }
 /* search */
 .filters .search {
+  padding: 0 0 10px 0;
   position: relative;
-  /* padding-top: 15px; */
-  width: 200px;
-  /* padding-bottom: 15px; */
+  width: 100%;
+  border-bottom: 1px solid var(--text-color);
 }
 .filters .search input {
-  font-size: 15px;
   border: none;
+  font-size: 15px;
   position: absolute;
   color: #23262f;
   margin: auto;
-  border-bottom: 1px solid var(--text-color);
-  padding: 0 0 10px 0;
 }
 .filters .search img {
   right: 14px;
