--- a/src/pages/Blogs/Blogs.css
+++ b/src/pages/Blogs/Blogs.css
@@ -1,50 +1,53 @@
-.blogs .no-blogs{
+.blogs .no-blogs {
   display: flex;
   align-items: center;
-justify-content: center;
+  justify-content: center;
   font-size: 30px;
   font-weight: 500;
   padding: 30px 0;
   height: 70vh;
 }
-.holder-blogs {
-    margin-top: 60px;
-    margin-bottom: 80px;
-    display: grid;
-    grid-template-columns: repeat(auto-fill, minmax(300px, 1fr));
-    gap: 70px;
-    border-bottom: 1px solid #C0C0C0;
-   padding-bottom:80px ;
-  }
-  .slider-blogs{
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    gap: 30px;
+.blogs {
+  .pagenation-btns {
     margin-bottom: 100px;
   }
-  .slider-blogs .first-num{
-    
-    border-bottom: 1px solid #000E0C;
-  }
-  .slider-blogs .second-num{
-    color: #C0C0C0;
-  }
-  .next-blogs{
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    gap: 5px;
-  }
+}
+.holder-blogs {
+  margin-top: 60px;
+  margin-bottom: 80px;
+  display: grid;
+  grid-template-columns: repeat(auto-fill, minmax(300px, 1fr));
+  gap: 70px;
+  border-bottom: 1px solid #c0c0c0;
+  padding-bottom: 80px;
+}
+.slider-blogs {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  gap: 30px;
+  margin-bottom: 100px;
+}
+.slider-blogs .first-num {
+  border-bottom: 1px solid #000e0c;
+}
+.slider-blogs .second-num {
+  color: #c0c0c0;
+}
+.next-blogs {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  gap: 5px;
+}
 
-  .slider-blogs .next-blogs-icon{
-    fill: #000E0C;
-    
-  }
- .search-holder-blog .search-blog {
+.slider-blogs .next-blogs-icon {
+  fill: #000e0c;
+}
+.search-holder-blog .search-blog {
   border-bottom: 1px solid #c0c0c0;
   width: 225px;
-  padding: 25px 0 10px ;
+  padding: 25px 0 10px;
   input {
     border: none;
     outline: none;
@@ -57,4 +60,4 @@ justify-content: center;
     width: 20px;
     height: 20px;
   }
- }
+}
