--- a/src/components/UpdatePasswordCard/UpdatePasswordCard.css
+++ b/src/components/UpdatePasswordCard/UpdatePasswordCard.css
@@ -1,3 +1,16 @@
+.password {
+  /* Chrome, Safari, Edge, Opera */
+  input[type="number"]::-webkit-outer-spin-button,
+  input[type="number"]::-webkit-inner-spin-button {
+    -webkit-appearance: none;
+    margin: 0;
+  }
+
+  /* Firefox */
+  input[type="number"] {
+    -moz-appearance: textfield;
+  }
+}
 .password .card {
   width: 40%;
   display: flex;
