--- a/src/pages/UpdatePassword/UpdatePassword.css
+++ b/src/pages/UpdatePassword/UpdatePassword.css
@@ -6,6 +6,8 @@
   align-items: center;
   background-image: linear-gradient(to left, #00000033, #00000033),
     url("/assets/Images/istockphoto-943910360-2048x2048.jpg");
+  background-image: linear-gradient(to left, #00000033, #00000033),
+    url("/assets/Images/profile22bg.jpg");
   background-repeat: no-repeat;
   background-size: cover;
   background-position: center;
