--- a/src/components/Card/Card.css
+++ b/src/components/Card/Card.css
@@ -4,7 +4,8 @@
   transition: all 0.2s ease-in-out;
   height: fit-content;
   width: 100%;
-  max-width: 300px;
+  /* max-width: 300px; */
+  max-width: 100%;
   overflow: hidden;
   position: relative;
 }
