--- a/src/pages/Designer/Designer.css
+++ b/src/pages/Designer/Designer.css
@@ -2,6 +2,11 @@
   /* margin: 150px 0 40px; */
   margin: 50px 0 40px;
 }
+.designers-holder {
+  .loader-holder {
+    height: 100vh;
+  }
+}
 .designers .designer-header {
   h1 {
     font-weight: 600;
@@ -35,12 +40,13 @@
   justify-content: center;
   gap: 24px;
 }
- .designer-list .no-designer-matches{
+.designer-list .no-designer-matches {
   text-align: center;
   font-size: 20px;
   font-weight: 400;
   padding-top: 50px;
- }
+}
+
 @media (max-width: 992px) {
   .designers .designer-header .search-filter-designer {
     flex-direction: column;
