--- a/src/components/Card/Card.css
+++ b/src/components/Card/Card.css
@@ -8,6 +8,12 @@
   max-width: 100%;
   overflow: hidden;
   position: relative;
+  span.real-price {
+    margin-left: 18px;
+    font-size: 14px;
+    color: #c0c0c0;
+    text-decoration: line-through;
+  }
 }
 .models .products .cards .card div {
   position: relative;
