--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -4,8 +4,7 @@ header {
   background-color: var(--secondary-color);
 }
 header .container,
-header .container .holder,
-.language {
+header .container .holder {
   display: flex;
   justify-content: space-between;
   align-items: center;
@@ -16,8 +15,7 @@ header .container {
 header .container .customize {
   text-transform: uppercase;
 }
-header .container .holder,
-.language {
+header .container .holder {
   gap: 0.6vw;
 }
 header .container .holder .language {
