--- a/src/sections/AboutSections/FollowUs/FollowUs.css
+++ b/src/sections/AboutSections/FollowUs/FollowUs.css
@@ -1,27 +1,29 @@
-.followus .title{
-    padding-bottom: 20px;
-    h2{
-        font-size: 50px;
-        font-weight: 700px;
-    }
+.followus .title {
+  padding-bottom: 20px;
+  h2 {
+    font-size: 50px;
+    font-weight: 700px;
+  }
 }
-.followus .slider{
-    display: grid;
-    grid-template-columns: repeat(6, auto);
-    gap: 5px;
+.followus .slider {
+  display: grid;
+  /* grid-template-columns: repeat(6, auto); */
+  grid-template-columns: repeat(auto-fill, minmax(250px, 1fr));
+  gap: 5px;
+  img {
+    width: 100%;
+  }
 }
 @media (max-width: 991px) {
-    
 }
 @media (max-width: 1250px) {
-    
 }
 @media (max-width: 500px) {
-    .followus .slider{
+  .followus .slider {
     display: grid;
     grid-template-columns: repeat(2, auto);
-}
-.followus .title h2{
-            font-size: 40px;
-}
+  }
+  .followus .title h2 {
+    font-size: 40px;
+  }
 }
